force-app/main/default/objects/Apttus_Config2__SavedSearch__c/Apttus_Config2__SavedSearch__c.object-meta.xml
<CustomObject>
    <description>Represents a saved search criteria.</description>
    <label>Saved Search</label>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>