force-app/main/default/objects/Apttus_Config2__SavedSearch__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The search description</description>
    <inlineHelpText>The search description</inlineHelpText>
    <label>Description</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>