force-app/main/default/objects/Apttus_Config2__SavedSearch__c/fields/Apttus_Config2__SearchContext__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchContext__c</fullName>
    <description>The search context</description>
    <inlineHelpText>The search context</inlineHelpText>
    <label>Search Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Search</fullName>
            </value>
            <value>
                <fullName>Asset Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>