force-app/main/default/objects/Apttus_Config2__SavedSearch__c/fields/Apttus_Config2__SearchCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchCriteria__c</fullName>
    <description>The search criteria specification</description>
    <inlineHelpText>The search criteria specification</inlineHelpText>
    <label>Search Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>