force-app/main/default/objects/Apttus_Config2__SavedSearch__c/fields/Apttus_Config2__ShareType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShareType__c</fullName>
    <description>The share type</description>
    <inlineHelpText>The share type</inlineHelpText>
    <label>Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>public</fullName>
            </value>
            <value>
                <fullName>private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>